--- a/lib/Perficient/DevOps/Vagrantfile
+++ b/lib/Perficient/DevOps/Vagrantfile
@@ -1,6 +1,10 @@
 Vagrant.configure(2) do |config|
   config.vm.box = 'CentOS-6.6-64-V1'
-  config.vm.box_url = '\\\\172.16.0.9\\Magento\\Vagrant\\Boxes\\CentOS-6.6-64-V1.box'
+  if ENV['LOCATION'] != 'NGP' 
+    config.vm.box_url = 'http://hub.dcs.perficient.com/Vagrant/Boxes/CentOS-6.6-64-V1.box'
+  else
+    config.vm.box_url = '\\\\172.16.0.9\\Magento\\Vagrant\\Boxes\\CentOS-6.6-64-V1.box'
+  end
   config.vm.synced_folder '../../../', '/vagrant'
   config.vm.network 'private_network', ip: '192.168.56.110', netmask: '255.255.0.0'
   
@@ -12,5 +16,8 @@ Vagrant.configure(2) do |config|
     puppet.manifests_path = 'puppet/manifests'
     puppet.module_path = 'puppet/modules'
     puppet.manifest_file = 'init.pp'
+    puppet.facter = {
+        "LOCATION" => ENV['LOCATION'] ? ENV['LOCATION'] : 'NGP'
+    }
   end
 end
