--- a/lib/Perficient/DevOps/Vagrantfile
+++ b/lib/Perficient/DevOps/Vagrantfile
@@ -1,6 +1,6 @@
 Vagrant.configure(2) do |config|
   config.vm.box = 'CentOS-6.6-64-V1'
-  if ENV['LOCATION'] != 'NGP' 
+  if ENV['LOCATION'] != '' && ENV['LOCATION'] != 'NGP' 
     config.vm.box_url = 'http://hub.dcs.perficient.com/vagrant/boxes/CentOS-6.6-64-V1.box'
   else
     config.vm.box_url = '\\\\172.16.0.9\\Magento\\Vagrant\\Boxes\\CentOS-6.6-64-V1.box'
